--- a/themes/anodyne/layout/_partial/after-footer.ejs
+++ b/themes/anodyne/layout/_partial/after-footer.ejs
@@ -20,3 +20,11 @@
       }
     </script>
   <% } %>
+<link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/9.2.0/styles/github.min.css">
+<script src="//cdn.bootcss.com/highlight.js/9.2.0/highlight.min.js"></script>
+<script>
+(function(){
+  console.log('hljs', hljs);
+  hljs.initHighlightingOnLoad();
+}())
+</script>
